Div edits from solution code

--- a/index.html
+++ b/index.html
@@ -47,21 +47,27 @@
 
 
       <main>
-            <section>
-                  <h1>Have the work week you always dreamed of &mdash; without the bad wifi.</h1>
+            <section class="hero-area">
+                  <div class="content-wrapper">
+                        <h1>Have the work week you always dreamed of &mdash; without the bad wifi.</h1>
+                  </div>
             </section>
 
             <aside>
-                  <h3>Want to join the next retreat?</h3>
-                  <p>Find out when we are holding our next retreat and how your company or team can sign up!<p>
+                  <div class="content-wrapper">
+                        <div class="form-description">
+                              <h3>Want to join the next retreat?</h3>
+                              <p>Find out when we are holding our next retreat and how your company or team can sign up!<p>
+                        </div>
 
-                  <div class="signup-form">
-                        <h3>Find out more</h3>
+                        <div class="form">
+                              <h3>Find out more</h3>
 
-                        <input type="text" name="name" value="email address">
-                        <input type="button" value="Download Itinerary">
+                              <input type="text" name="name" value="email address">
+                              <input type="button" value="Download Itinerary">
+                        </div>
 
-                  </div>
+                  </div> <!-- aside content wrapper ends-->
             </aside>
 
       </main>
@@ -71,20 +77,24 @@
                   <div class="footer-content">
 
                         <div class="contact">
+                              <h4>Contact</h4>
                               <address>
-                                    <h2>Contact</h2>
+
                                     <p>555-555-5555<br>
                                       hello@unplugged.com</p>
+                                      
                               </address>
                         </div>
 
                         <div class="social">
+                              <h4>Social</h4>
+
                               <div class="social-icons">
-                                    <h2>Social</h2>
-                                    <p><a href="https://www.facebook.com/yoursite" target="_blank">Facebook</a></p>
-                                    <p><a href="" target="_blank">Twitter</a></p>
-                                    <p><a href="" target="_blank">Instagram</a></p>
-                                    <!-- other social links here -->
+
+                                    <p><a href="https://www.facebook.com/skillcrush" target="_blank">Facebook</a></p>
+                                    <p><a href="https://www.twitter.com/skillcrush" target="_blank">Twitter</a></p>
+                                    <p><a href="https://www.instagram.com/skillcrush" target="_blank">Instagram</a></p>
+
                               </div>
                         </div>
                   </div> <!-- footer content ends -->
