--- a/faq/index.html
+++ b/faq/index.html
@@ -23,9 +23,107 @@
 </head>
 
 <body>
+      <header>
+            <div class="content-wrapper">
+                  <a href="#"><img src="" alt="unplugged logo"></a>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+                  <div class="header-divider">
+                  </div>
+
+                  <nav>
+                        <ul>
+                              <li><a href="index.html">FAQ</a></li>
+                              <li><a href="../about/index.html" target="_blank">About</a></li>
+                        </ul>
+                  </nav>
+
+            </div>
+
+      </header>
+
+
+      <main>
+
+            <section class="faq">
+                  <div class="content-wrapper">
+                        <h2>Frequently Asked Questions</h2>
+                        <div class="faq-content">
+                              <h4 class="questions">How do I get to the Unplugged retreat?</h4>
+                              <p class="answers">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua.
+                                Quis ipsum suspendisse ultrices gravida.</p>
+                        </div>
+
+                        <div class="faq-content">
+                              <h4 class="questions">What kind of team is right for the Unplugged retreat?</h4>
+                              <p class="answers">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua.
+                                Quis ipsum suspendisse ultrices gravida.</p>
+                        </div>
+
+                        <div class="faq-content">
+                              <h4 class="questions">What size teams can you accommodate?</h4>
+                              <p class="answers">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua.
+                                Quis ipsum suspendisse ultrices gravida.</p>
+                        </div>
+
+                        <div class="faq-content">
+                              <h4 class="questions">Is there really no wifi available?</h4>
+                              <p class="answers">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore magna aliqua.
+                                Quis ipsum suspendisse ultrices gravida.</p>
+                        </div>
+
+                  </div> <!-- faq content wrapper ends-->
+            </section>
+
+      </main>
+
+
+
+
+
+
+      <footer>
+            <div class="content-wrapper">
+                  <div class="footer-content">
+
+                        <div class="contact">
+                              <h4>Contact</h4>
+                              <address>
+
+                                    <p>555-555-5555<br>
+                                      hello@unplugged.com</p>
+
+                              </address>
+                        </div>
+
+                        <div class="social">
+                              <h4>Social</h4>
+
+                              <div class="social-icons">
+
+                                    <p><a href="https://www.facebook.com/skillcrush" target="_blank">Facebook</a></p>
+                                    <p><a href="https://www.twitter.com/skillcrush" target="_blank">Twitter</a></p>
+                                    <p><a href="https://www.instagram.com/skillcrush" target="_blank">Instagram</a></p>
+
+                              </div>
+                        </div>
+                  </div> <!-- footer content ends -->
+            </div> <!-- footer content-wrapper ends -->
+
+            <div class="copyright">
+                  <p>Copyright 2019 | Unplugged</p>
+            </div>
+
+      </footer>
+
+
+
+
+
+
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
