--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300&display=swap" rel="stylesheet">
+
   <meta name="theme-color" content="#fafafa">
 </head>
 
@@ -26,7 +30,7 @@
 
       <header>
             <div class="content-wrapper">
-                  <a href="#"><img src="" alt="unplugged logo"></a>
+                  <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>
 
                   <div class="header-divider">
                   </div>
