Mobile css and images added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 
       <header>
             <div class="content-wrapper">
-                  <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>
+                  <figure>
+                        <a href="#"><img src="img/unpluggedlogo.png" alt="unplugged logo"></a>
+                  </figure>
 
                   <div class="header-divider">
                   </div>
@@ -64,7 +66,7 @@
                         <div class="form">
                               <h3>Find out more</h3>
 
-                              <input type="text" name="name" value="email address">
+                              <input type="text" name="name" value="name@email.com">
                               <input type="button" value="Download Itinerary">
                         </div>
 
@@ -113,8 +115,10 @@
                         <h2>Be a better team in 5 days, like these.</h2>
                         <article>
                               <div>
-                                    <img src="" alt="reivew-img">
-                                    <h3>LaCrue Bottline Co. October 2017</h3>
+                                    <figure>
+                                          <img src="img/lacrue-bottling-team.jpg" alt="lacrue-bottling">
+                                    </figure>
+                                    <h3>LaCrue Bottling Co. October 2017</h3>
 
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                                       Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
