--- a/about/index.html
+++ b/about/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="../css/main.css">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@100;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@100;400;700&family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
 
 
   <meta name="theme-color" content="#fafafa">
@@ -31,7 +31,9 @@
 
       <header>
             <div class="content-wrapper">
-                  <a href="#"><img src="" alt="unplugged logo"></a>
+                  <figure>
+                        <a href="#"><img src="../img/unpluggedlogo.png" alt="unplugged logo"></a>
+                  </figure>
 
                   <div class="header-divider">
                   </div>
