--- a/faq/index.html
+++ b/faq/index.html
@@ -109,9 +109,9 @@
 
                               <div class="social-icons">
 
-                                    <p><a href="https://www.facebook.com/skillcrush" target="_blank">Facebook</a></p>
-                                    <p><a href="https://www.twitter.com/skillcrush" target="_blank">Twitter</a></p>
-                                    <p><a href="https://www.instagram.com/skillcrush" target="_blank">Instagram</a></p>
+                                    <p><a href="https://www.facebook.com/skillcrush" target="_blank"><i class="fab fa-facebook-f"></i></a></p>
+                                    <p><a href="https://www.twitter.com/skillcrush" target="_blank"><i class="fab fa-twitter"></i></a></p>
+                                    <p><a href="https://www.instagram.com/skillcrush" target="_blank"><i class="fab fa-instagram"></i></a></p>
 
                               </div>
                         </div>
