--- a/faq/index.html
+++ b/faq/index.html
@@ -22,6 +22,9 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@100;400;700&family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
 
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/d965264f76.js" crossorigin="anonymous"></script>
+
   <meta name="theme-color" content="#fafafa">
 </head>
 
